deploy/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-daskal-ai-deployment
  namespace: argocd
spec:
  selector:
    matchLabels:
      app: prod-daskal-ai-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: prod-daskal-ai-pod
      annotations:
        rollme: "v1"  # Change this value (e.g., to "v2", "v3", etc.) whenever you need to force a rollout
    spec:
      containers:
        - name: daskal-ai
          image: ghcr.io/open-webui/open-webui:main
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: prod-data-volume
              mountPath: /app/backend/data
      volumes:
        - name: prod-data-volume
          persistentVolumeClaim:
            claimName: prod-daskal-ai-data-pvc
