deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daskal-ai-service
  namespace: argocd
spec:
  selector:
    app: daskal-ai-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
